replace static String.format with string.formatted